--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kube-apiserver-slos.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/kube-apiserver-slos.yaml
@@ -46,7 +46,7 @@ spec:
       {{- end }}
       labels:
         long: 1h
-        severity: {{ dig "KubeAPIErrorBudgetBurn" "labelsSeverity" "critical" .Values.customRules }}
+        severity: {{ dig "KubeAPIErrorBudgetBurn" "severity" "critical" .Values.customRules }}
         short: 5m
       {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
@@ -79,7 +79,7 @@ spec:
       {{- end }}
       labels:
         long: 6h
-        severity: {{ dig "KubeAPIErrorBudgetBurn" "labelsSeverity" "critical" .Values.customRules }}
+        severity: {{ dig "KubeAPIErrorBudgetBurn" "severity" "critical" .Values.customRules }}
         short: 30m
       {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
@@ -112,7 +112,7 @@ spec:
       {{- end }}
       labels:
         long: 1d
-        severity: {{ dig "KubeAPIErrorBudgetBurn" "labelsSeverity" "warning" .Values.customRules }}
+        severity: {{ dig "KubeAPIErrorBudgetBurn" "severity" "warning" .Values.customRules }}
         short: 2h
       {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
@@ -145,7 +145,7 @@ spec:
       {{- end }}
       labels:
         long: 3d
-        severity: {{ dig "KubeAPIErrorBudgetBurn" "labelsSeverity" "warning" .Values.customRules }}
+        severity: {{ dig "KubeAPIErrorBudgetBurn" "severity" "warning" .Values.customRules }}
         short: 6h
       {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.kubeApiserverSlos }}
         {{- with .Values.defaultRules.additionalRuleLabels }}
